WebServerResources/wc.css
/* ... */
#globalnav LI.admin A {
	color: #c9c;
	background:#636;
	border-left:1px solid #fcf;
	border-top:1px solid #fcf;
	border-right:1px solid #303;
}

#globalnav LI.staff A {
	color: #ccf;
	background:#336;
	border-left:1px solid #ccf;
	border-top:1px solid #ccf;
	border-right:1px solid #003;
}

#globalnav A:hover,
#globalnav A:active,
#globalnav LI.here1 A:link,
#globalnav LI.here1 A:visited {
	background: #fc9;
	color: #363;
	border-left:1px solid #ffc;
	border-top:1px solid #ffc;
	border-right:1px solid #930;
}

#globalnav LI.admin A:hover,
#globalnav LI.admin A:active {
	background: #c9c;
	color: #303;
	border-left:1px solid #fcf;
	border-top:1px solid #fcf;
	border-right:1px solid #303;
}

#globalnav LI.staff A:hover,
#globalnav LI.staff A:active {
	background: #ccf;
	color: #336;
	border-left:1px solid #cff;
	border-top:1px solid #cff;
	border-right:1px solid #003;
}

#globalnav LI.here1 A:link,
#globalnav LI.here1 A:visited {
	position:relative;
	z-index:102;
}


/* subnav ----------------------------------------------------------------- */

#globalsubnav {
	position:relative;
	float:left;
	width:100%;
/*
        position: absolute;
	left:0;
	top:1.5em;
*/
	background:#fc9;
        color: #000;
	margin:0;
	list-style:none;
	border-top:1px solid #ffc;
	border-left:1px solid #fc9;
	border-right:1px solid #fc9;
        display: block;
	padding:0.25em 0 0.25em 0;
}

#globalsubnav LI {
	float:left;
	display:block;
	margin-top:1px;
	margin-left: 0;
}

#globalsubnav A {
	display:block;
	color:#9c9;
	text-decoration:none;
	font-weight:bold;
	background:#363;
	margin:0;
	padding:0.25em 1em;
	border-left:1px solid #cfc;
	border-top:1px solid #cfc;
	border-right:1px solid #030;
}

#globalsubnav A:link,
#globalsubnav A:visited {
	background:#fc9;
	color:#696;
	display:inline;
	margin:0 .2em;
	padding:0 1em;
	border:0;
}

#globalsubnav A:hover,
#globalsubnav A:active,
#globalsubnav LI.here2 A:link,
#globalsubnav LI.here2 A:visited {
	color:#363;
	background-image: url(icons/rt-arrow.gif);
        background-repeat: no-repeat;
	background-position: center left;
}


/* Notice panels ---------------------------------------------------------- */

.NoticePanel {background: transparent;}
.top, .bottom {display:block; background:transparent; font-size:1px;}
.b1, .b2, .b3, .b4, .b1b, .b2b, .b3b, .b4b {display:block; overflow:hidden;}
.b1, .b2, .b3, .b1b, .b2b, .b3b {height:1px;}
.b2 {border-left:1px solid #ddd; border-right:1px solid #ccc;}
.b3 {border-left:1px solid #ddd; border-right:1px solid #bbb;}
.b4 {border-left:1px solid #ddd; border-right:1px solid #888;}
.b4b {border-left:1px solid #ccc; border-right:1px solid #333;}
.b3b {border-left:1px solid #bbb; border-right:1px solid #333;}
.b2b {border-left:1px solid #888; border-right:1px solid #333;}

.b1 {margin:0 5px; background:#ddd;}
.b2, .b2b {margin:0 3px; border-width:0 2px;}
.b3, .b3b {margin:0 2px;}
.b4, .b4b {height:2px; margin:0 1px;}
.b1b {margin:0 5px; background:#333;}
.boxcontent {display:block; border-left:1px solid #ddd; border-right:1px solid #333; padding:0 4px; color:#333;}


.NoticePanel.error .b2, .NoticePanel.error .b3, .NoticePanel.error .b4, .NoticePanel.error .b2b, .NoticePanel.error .b3b, .NoticePanel.error .b4b, .NoticePanel.error .boxcontent {
    background-color: #fed;
}

.NoticePanel .b2, .NoticePanel .b3, .NoticePanel .b4, .NoticePanel .b2b, .NoticePanel .b3b, .NoticePanel .b4b, .NoticePanel .boxcontent {
    background-color: #efd;
}

.NoticePanel ul {
    list-style-type: none;
    padding: 4px;
    padding-bottom: 0;
    margin: 0;
    /* border: 1px solid blue; */
}

.NoticePanel li {
    background: url(icons/info.gif) left top no-repeat;
    padding-left: 24px;
    padding-bottom: 4px;
    /* border: 1px solid red; */
}

.NoticePanel li.error { background-image: url(icons/exclaim.gif); }
.NoticePanel li.warning { background-image: url(icons/caution.gif); }
.NoticePanel li.suggestion { background-image: url(icons/suggestion.gif); }
.NoticePanel li.check { background-image: url(icons/check.gif); }
.nlbefore { margin-top: 1em; }
.nlafter  { margin-bottom: 1em; }


/* Color-coding for generic user pages ------------------------------------ */

BODY.user H1, BODY.user H2, BODY.user H3, BODY.user H4,
BODY.user H5, BODY.user H6, BODY.user H7 {
    color: #363;
}

BODY.user B, BODY.user STRONG {
    color: #363;
}

SPAN.hl {
	/* background-color: #fc9; */
        background-color: #ffd;
	color: #363;
	font-weight: bold;
	padding: .2em .5em;
}
SPAN.sm { font-size: smaller }
BODY.user b.check { color: green; }
BODY.user b.warn  { color: red; }

TR.o  { background-color: #fff; }
TR.e  { background-color: #ffd; }
TR.oe { background-color: #faa; }
TR.ee { background-color: #f99; }
TR.oc { background-color: #ef4; }
TR.ec { background-color: #de0; }
TD.n  { text-align: right;  }
TD.s  { text-align: center; }
TD.L  { text-align: left;   }
TD.R  { text-align: right;  }
TD.nowrap { white-space: nowrap; }

DIV#contents TABLE.ErrorDictionaryPanel,
BODY.admin DIV#contents TABLE.ErrorDictionaryPanel,
BODY.staff DIV#contents TABLE.ErrorDictionaryPanel {
    border: 1px solid #ff6600;
    margin-top: .5em;
    margin-bottom: .5em;
}

DIV#contents TABLE.ErrorDictionaryPanel TD {
    padding: 0.25em;
}

TABLE.FullBox {
    border: 1px solid #f96;
    width: 100%;
    border-collapse: collapse;
}


/* Color-coding for admin pages ------------------------------------------- */

BODY.admin DIV#page {
	border : 1px solid #969;
	border-top : none;
}

BODY.admin H1, BODY.admin H2, BODY.admin H3, BODY.admin H4,
BODY.admin H5, BODY.admin H6, BODY.admin H7 {
    color: #636;
}

BODY.admin B, BODY.admin STRONG {
    color: #636;
}
BODY.admin b.check { color: green; }
BODY.admin b.warn  { color: red; }

BODY.admin DIV#contents TABLE {
	border-color: #636;
}

BODY.admin TABLE.FullBox {
	border-color: #636;
}

BODY.admin DIV#contents TABLE TH {
	background-color: #636;
	color: #fcf;
}
/* ... */

